css: ensure correct alignment of address block in footer
The RSS icon was messing with vertical alignment. Fix that. Also add
some space between the icon and the address.

--- a/content/media/css/luffy.footer.less
+++ b/content/media/css/luffy.footer.less
@@ -21,6 +21,10 @@ footer {
 	float: right;
 	margin-left: 2em;
 	font-style: normal;
+        .lf-sprite-rss {
+            vertical-align: text-bottom;
+            margin-left: .5em;
+        }
     }
     h3 {
 	display: inline;
